--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
+            indicator.zip
             readme.md
             changelog.md
             license.txt
