--- a/PsyRoundLevel/PsyRoundLevel.csproj
+++ b/PsyRoundLevel/PsyRoundLevel.csproj
@@ -1,9 +1,9 @@
-﻿<!-- 
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!-- 
 // Copyright (c) 2025 https://github.com/qtx-project
 // Licensed under the **[GPL-3.0 License](./license.txt)**.
 // See LICENSE file in the project root for full license information. 
 -->
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <!-- Path to the Quantower Directory. This is a variable used to 
